--- a/merit/seniors/boren.html
+++ b/merit/seniors/boren.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -12,13 +12,13 @@
       <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
 
       <!-- Le styles -->
-      <link href="../assets/css/bootstrap.css" rel="stylesheet">
-      <link href="../assets/css/bootmin.css" rel="stylesheet">
+      <link href="../../assets/css/bootstrap.css" rel="stylesheet">
+      <link href="../../assets/css/bootmin.css" rel="stylesheet">
       <style type="text/css">
 
 
         body {
-          background-image:url('../assets/img/sub-background.png');
+          background-image:url('../../assets/img/sub-background.png');
           background-repeat: repeat-x;
           background-color: #dfeef9;
           padding-top: 0px;
@@ -205,7 +205,7 @@
             margin-bottom: 10px;
           }
           footer{
-            background-image:url('../assets/img/bgfooter.jpg');
+            background-image:url('../../assets/img/bgfooter.jpg');
             background-repeat: repeat-x;
             background-color: #fff;
           }
@@ -224,21 +224,24 @@
           .pad-me {
             padding: 0 25px;
           }
+          .scholarship-box {
+            margin-bottom: 20px;
+          }
       </style>
       
       <!--<link href="assets/css/bootstrap.css" rel="stylesheet">-->
 
       <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
-        <script src="../assets/js/html5shiv.js"></script>
+        <script src="../../assets/js/html5shiv.js"></script>
       <![endif]-->
 
       <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                      <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                     <link rel="shortcut icon" href="../assets/ico/favicon.png">
+      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../assets/ico/apple-touch-icon-144-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../../assets/ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../assets/ico/apple-touch-icon-72-precomposed.png">
+                      <link rel="apple-touch-icon-precomposed" href="../../assets/ico/apple-touch-icon-57-precomposed.png">
+                                     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
     </head>
 
     <body id="top">
@@ -301,13 +304,15 @@
 
       <div class="container top-logo">
         <ul class="breadcrumb">
-          <li><a href="../home/index.html">Home</a> <span class="divider">/</span></li>
-          <li class="active">National and International Scholarships</li>
+          <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
+          <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
+          <li><a href="./index.html">Seniors</a> <span class="divider">/</span></li>
+          <li class="active">Boren Scholarship</li>
         </ul>
       </div>
       <!-- pic -->
       <div class="container">
-        <img src="../assets/img/pic4.png">
+        <img src="../../assets/img/pic4.png">
       </div>
       <!-- mid -->
       <div class="container main-feature-bg">
@@ -316,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>National and International Scholarships</h2>
+                <h2>Boren Scholarship</h2>
                 <hr/>
               </div>
             </div>
@@ -325,24 +330,62 @@
             <div class="span4">
               <h3>Scholarship Links</h3>
               <ul class="unstyled">
-                <li><a href="./sophomores/index.html">Sophomores</a></li>
-                <li><a href="./juniors/index.html">Juniors</a></li>
-                <li><a href="./seniors/index.html">Seniors</a></li>
-                <li><a href="./grads/index.html">Recent Graduates</a></li>
+                <li><a href="../sophomores/index.html">Sophomores</a></li>
+                <li><a href="../juniors/index.html">Juniors</a></li>
+                <li><a href="../seniors/index.html">Seniors</a></li>
+                <li><a href="../grads/index.html">Recent Graduates</a></li>
               </ul>
             </div>
             <div class="span8">
-              <h3>Awards</h3>
-              <p>
-                The National and International Merit Scholarships are prestigious awards with numerous benefits. In order to qualify for many of these scholarships, you must be nominated by a UCLA selection committee: therefore, please remember that
-              </p>
-              <p>
-                <blockquote>the UCLA campus deadline for nomination is approximately ONE MONTH PRIOR to the official scholarship deadline.</blockquote>
-              </p>
-              <p>
-                Some of these applications, particularly the International Merit Scholarships, have campus deadlines as early as late September, prior to the beginning of Fall Quarter, during the year in which you apply. 
-              </p>
+              <div class="row-fluid">
+                <h3>Description</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                	<p>
+                		Boren Scholarships provide up to $20,000 to U.S. undergraduate students to study abroad in areas of the world that are critical to U.S. interests and underrepresented in study abroad, including Africa, Asia, Central &amp; Eastern Europe, Eurasia, Latin America, and the Middle East. The countries of Western Europe, Canada, Australia, and New Zealand are excluded. 
+					         </p>
+                	<p>
+        						Boren Scholars represent a variety of academic backgrounds, but all are interested in studying less commonly taught languages, including but not limited to Arabic, Chinese, Korean, Portuguese, Russian, and Swahili. 
+        					</p>
+                	<p>
+            				Boren Scholarships are funded by the National Security Education Program (NSEP), which focuses on geographic areas, languages, and fields of study deemed critical to U.S. national security. Applicants should identify how their study abroad program, as well as their future academic and career goals, will contribute to U.S. national security, broadly defined.  NSEP draws on a broad definition of national security, recognizing that the scope of national security has expanded to include not only the traditional concerns of protecting and promoting American well-being, but also the challenges of global society, including sustainable development, environmental degradation, global disease and hunger, population growth and migration, and economic competitiveness.
+            			</p>
+                	<p>
+						        Scholarship award recipients will be selected on the basis of merit with consideration for program preferences, academic record and potential to succeed in the proposed study abroad program, commitment to international education to fulfill academic and career goals, language interest and aptitude, and the quality and appropriateness of the proposed program and its relevance to the National Security Education Program. 
+					       </p>
+                </div>
+              </div> 
+              <div class="row-fluid">
+                <h3>Award</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                Maximum scholarship awards are: 
+                <ul>
+                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
+                  <li>$10,000 for a semester</li>
+                  <li>$20,000 for a full academic year</li>
+                </ul>
+                </div>
+              </div> 
+              <div class="row-fluid">
+                <h3>Eligibility</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                <ol>
+                  <li>A U.S. citizen at the time of application.</li>
+                  <li>A high school graduate, or have earned a GED, and are matriculated in an undergraduate degree program in a U.S. post-secondary institution, including universities, colleges and community colleges accredited by an accrediting body recognized by the U.S. Department of Education.</li>
+                  <li>Applying to engage in a study abroad experience in a country outside of Western Europe, Canada, Australia, or New Zealand that meets home institution standards.</li>
+                  <li>Planning to use the scholarship for study abroad, and the study abroad program ends before you graduate. Boren Scholarships are not for study in the United States.</li>
+                </ol>
+                For more information, go to <br />
+                <a href="http://www.gdnet.ucla.edu/asis/library/boren.htm">http://www.gdnet.ucla.edu/asis/library/boren.htm</a><br />
+                <a href="http://www.borenawards.org/boren_scholarship">http://www.borenawards.org/boren_scholarship</a><br />
 
+                </div>
+              </div> 
             </div>
          </div>
         </div>
@@ -389,14 +432,13 @@
         </div>
 
       </div>
-
       <!-- Le javascript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+      <script type="text/script" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
       <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-      <script src="../assets/js/bootstrap.js"></script>
-      <script src="../assets/js/jquery.menu-aim.js"></script>
+      <script type="text/script" src="../../assets/js/bootstrap.js"></script>
+      <script type="text/script" src="../../assets/js/jquery.menu-aim.js"></script>
         <script type="text/javascript">
 
   var _gaq = _gaq || [];
