--- a/merit/seniors/churchill.html
+++ b/merit/seniors/churchill.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -12,13 +12,13 @@
       <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
 
       <!-- Le styles -->
-      <link href="../assets/css/bootstrap.css" rel="stylesheet">
-      <link href="../assets/css/bootmin.css" rel="stylesheet">
+      <link href="../../assets/css/bootstrap.css" rel="stylesheet">
+      <link href="../../assets/css/bootmin.css" rel="stylesheet">
       <style type="text/css">
 
 
         body {
-          background-image:url('../assets/img/sub-background.png');
+          background-image:url('../../assets/img/sub-background.png');
           background-repeat: repeat-x;
           background-color: #dfeef9;
           padding-top: 0px;
@@ -205,7 +205,7 @@
             margin-bottom: 10px;
           }
           footer{
-            background-image:url('../assets/img/bgfooter.jpg');
+            background-image:url('../../assets/img/bgfooter.jpg');
             background-repeat: repeat-x;
             background-color: #fff;
           }
@@ -224,21 +224,24 @@
           .pad-me {
             padding: 0 25px;
           }
+          .scholarship-box {
+            margin-bottom: 20px;
+          }
       </style>
       
       <!--<link href="assets/css/bootstrap.css" rel="stylesheet">-->
 
       <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
-        <script src="../assets/js/html5shiv.js"></script>
+        <script src="../../assets/js/html5shiv.js"></script>
       <![endif]-->
 
       <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                      <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                     <link rel="shortcut icon" href="../assets/ico/favicon.png">
+      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../assets/ico/apple-touch-icon-144-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../../assets/ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../assets/ico/apple-touch-icon-72-precomposed.png">
+                      <link rel="apple-touch-icon-precomposed" href="../../assets/ico/apple-touch-icon-57-precomposed.png">
+                                     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
     </head>
 
     <body id="top">
@@ -301,13 +304,15 @@
 
       <div class="container top-logo">
         <ul class="breadcrumb">
-          <li><a href="../home/index.html">Home</a> <span class="divider">/</span></li>
-          <li class="active">National and International Scholarships</li>
+          <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
+          <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
+          <li><a href="./index.html">Seniors</a> <span class="divider">/</span></li>
+          <li class="active">Churchill Scholarship</li>
         </ul>
       </div>
       <!-- pic -->
       <div class="container">
-        <img src="../assets/img/pic4.png">
+        <img src="../../assets/img/pic4.png">
       </div>
       <!-- mid -->
       <div class="container main-feature-bg">
@@ -316,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>National and International Scholarships</h2>
+                <h2>Churchill Scholarship</h2>
                 <hr/>
               </div>
             </div>
@@ -325,24 +330,51 @@
             <div class="span4">
               <h3>Scholarship Links</h3>
               <ul class="unstyled">
-                <li><a href="./sophomores/index.html">Sophomores</a></li>
-                <li><a href="./juniors/index.html">Juniors</a></li>
-                <li><a href="./seniors/index.html">Seniors</a></li>
-                <li><a href="./grads/index.html">Recent Graduates</a></li>
+                <li><a href="../sophomores/index.html">Sophomores</a></li>
+                <li><a href="../juniors/index.html">Juniors</a></li>
+                <li><a href="../seniors/index.html">Seniors</a></li>
+                <li><a href="../grads/index.html">Recent Graduates</a></li>
               </ul>
             </div>
             <div class="span8">
-              <h3>Awards</h3>
-              <p>
-                The National and International Merit Scholarships are prestigious awards with numerous benefits. In order to qualify for many of these scholarships, you must be nominated by a UCLA selection committee: therefore, please remember that
-              </p>
-              <p>
-                <blockquote>the UCLA campus deadline for nomination is approximately ONE MONTH PRIOR to the official scholarship deadline.</blockquote>
-              </p>
-              <p>
-                Some of these applications, particularly the International Merit Scholarships, have campus deadlines as early as late September, prior to the beginning of Fall Quarter, during the year in which you apply. 
-              </p>
-
+              <div class="row-fluid">
+                <h3>Description</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                	<p>
+                    The Churchill Scholarship funds one year of graduate study, beginning in Fall 2014, at Churchill College, University of Cambridge, England, leading to a certificate, diploma, or Master of Philosophy degree in engineering, mathematics, or the sciences. 
+                  </p>
+                </div>
+              </div> 
+              <div class="row-fluid">
+                <h3>Award</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                The award covers all tuition and living expenses, as well as travel and research stipends.
+                </div>
+              </div> 
+              <div class="row-fluid">
+                <h3>Eligibility</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                  <p>An applicant must be nominated by UCLA and:</p>
+                  <ol>
+                    <li>Be a U.S. citizen</li>
+                    <li>Have a GPA of 3.7 or higher</li>
+                    <li>Be between 19 and 26 years of age</li>
+                    <li>Demonstrate a capacity for original, creative work</li>
+                    <li>Hold a Bachelor's Degree from a U.S. institution before beginning study as a Churchill Scholar</li>
+                    <li>Have taken the Graduate Record Exam (GRE) or MCAT</li>
+                    <li>Have applied directly to the University of Cambridge, Churchill College, by the Cambridge deadline</li>
+                  </ol>
+                  For more information, go to <br />
+                  <a href="http://www.ugeducation.ucla.edu/honors/churchill.html">http://www.ugeducation.ucla.edu/honors/churchill.html</a><br />
+                  <br />
+                </div>
+              </div> 
             </div>
          </div>
         </div>
@@ -389,14 +421,13 @@
         </div>
 
       </div>
-
       <!-- Le javascript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+      <script type="text/script" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
       <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-      <script src="../assets/js/bootstrap.js"></script>
-      <script src="../assets/js/jquery.menu-aim.js"></script>
+      <script type="text/script" src="../../assets/js/bootstrap.js"></script>
+      <script type="text/script" src="../../assets/js/jquery.menu-aim.js"></script>
         <script type="text/javascript">
 
   var _gaq = _gaq || [];
