--- a/merit/seniors/fashion.html
+++ b/merit/seniors/fashion.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -12,13 +12,13 @@
       <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
 
       <!-- Le styles -->
-      <link href="../assets/css/bootstrap.css" rel="stylesheet">
-      <link href="../assets/css/bootmin.css" rel="stylesheet">
+      <link href="../../assets/css/bootstrap.css" rel="stylesheet">
+      <link href="../../assets/css/bootmin.css" rel="stylesheet">
       <style type="text/css">
 
 
         body {
-          background-image:url('../assets/img/sub-background.png');
+          background-image:url('../../assets/img/sub-background.png');
           background-repeat: repeat-x;
           background-color: #dfeef9;
           padding-top: 0px;
@@ -205,7 +205,7 @@
             margin-bottom: 10px;
           }
           footer{
-            background-image:url('../assets/img/bgfooter.jpg');
+            background-image:url('../../assets/img/bgfooter.jpg');
             background-repeat: repeat-x;
             background-color: #fff;
           }
@@ -224,21 +224,24 @@
           .pad-me {
             padding: 0 25px;
           }
+          .scholarship-box {
+            margin-bottom: 20px;
+          }
       </style>
       
       <!--<link href="assets/css/bootstrap.css" rel="stylesheet">-->
 
       <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
-        <script src="../assets/js/html5shiv.js"></script>
+        <script src="../../assets/js/html5shiv.js"></script>
       <![endif]-->
 
       <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                      <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                     <link rel="shortcut icon" href="../assets/ico/favicon.png">
+      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../assets/ico/apple-touch-icon-144-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../../assets/ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../assets/ico/apple-touch-icon-72-precomposed.png">
+                      <link rel="apple-touch-icon-precomposed" href="../../assets/ico/apple-touch-icon-57-precomposed.png">
+                                     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
     </head>
 
     <body id="top">
@@ -301,13 +304,15 @@
 
       <div class="container top-logo">
         <ul class="breadcrumb">
-          <li><a href="../home/index.html">Home</a> <span class="divider">/</span></li>
-          <li class="active">National and International Scholarships</li>
+          <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
+          <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
+          <li><a href="./index.html">Seniors</a> <span class="divider">/</span></li>
+          <li class="active">Fashion Scholarship Fund (FSF)</li>
         </ul>
       </div>
       <!-- pic -->
       <div class="container">
-        <img src="../assets/img/pic4.png">
+        <img src="../../assets/img/pic4.png">
       </div>
       <!-- mid -->
       <div class="container main-feature-bg">
@@ -316,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>National and International Scholarships</h2>
+                <h2>Fashion Scholarship Fund (FSF)</h2>
                 <hr/>
               </div>
             </div>
@@ -325,24 +330,50 @@
             <div class="span4">
               <h3>Scholarship Links</h3>
               <ul class="unstyled">
-                <li><a href="./sophomores/index.html">Sophomores</a></li>
-                <li><a href="./juniors/index.html">Juniors</a></li>
-                <li><a href="./seniors/index.html">Seniors</a></li>
-                <li><a href="./grads/index.html">Recent Graduates</a></li>
+                <li><a href="../sophomores/index.html">Sophomores</a></li>
+                <li><a href="../juniors/index.html">Juniors</a></li>
+                <li><a href="../seniors/index.html">Seniors</a></li>
+                <li><a href="../grads/index.html">Recent Graduates</a></li>
               </ul>
             </div>
             <div class="span8">
-              <h3>Awards</h3>
-              <p>
-                The National and International Merit Scholarships are prestigious awards with numerous benefits. In order to qualify for many of these scholarships, you must be nominated by a UCLA selection committee: therefore, please remember that
-              </p>
-              <p>
-                <blockquote>the UCLA campus deadline for nomination is approximately ONE MONTH PRIOR to the official scholarship deadline.</blockquote>
-              </p>
-              <p>
-                Some of these applications, particularly the International Merit Scholarships, have campus deadlines as early as late September, prior to the beginning of Fall Quarter, during the year in which you apply. 
-              </p>
+              <div class="row-fluid">
+                <h3>Description</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                	<p>
+                		The YMA Fashion Scholarship Fund (FSF) is a national non-profit association consisting of influential members of the fashion community, dedicated to promoting education of the fashion arts and business by granting scholarships to talented students and facilitating internships, mentorships, and career programs.
+                  </p>
+                  <p>
+                    Students of any major with a demonstrated interest in fashion are qualified to apply. Previous scholars have included marketing, finance, psychology, and art history majors in addition to fashion design, merchandising, and textile majors. On average, approximately 100 scholarships are awarded each year
+					        </p>
+                </div>
+              </div> 
+              <div class="row-fluid">
+                <h3>Award</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                $5,000. One scholar from each school will also have the opportunity to compete for the four $30,000 Geoffrey Beene Scholarships (four finalists receive $10,000).
+                </div>
+              </div> 
+              <div class="row-fluid">
+                <h3>Eligibility</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                <ol>
+                  <li>Eligible students from member schools may apply. Students must be selected by the educator contact at one of the member schools. Please see the schools tab to see the list of member schools.</li>
+                  <li>Qualifying students must be enrolled as full-time students at a member FSF college/university. Eligible students must be a current sophomore, junior or senior (Seniors must graduate in the spring; fall graduates are NOT eligible)</li>
+                  <li>Applicants must have an overall G.P.A of 3.0 or above in a 4.0 G.P.A system.</li>
+                  <li>Upon receiving an FSF scholarship, it is mandatory to secure an industry-related internship, either found on your own or offered by a FSF member company.</li>
+                </ol>
+                For more information, call The UCLA Scholarship Resource Center at 310-206-2875 or go to <br />
+                <a href="http://fashionscholarshipfund.org">http://fashionscholarshipfund.org</a><br />
 
+                </div>
+              </div> 
             </div>
          </div>
         </div>
@@ -389,14 +420,13 @@
         </div>
 
       </div>
-
       <!-- Le javascript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+      <script type="text/script" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
       <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-      <script src="../assets/js/bootstrap.js"></script>
-      <script src="../assets/js/jquery.menu-aim.js"></script>
+      <script type="text/script" src="../../assets/js/bootstrap.js"></script>
+      <script type="text/script" src="../../assets/js/jquery.menu-aim.js"></script>
         <script type="text/javascript">
 
   var _gaq = _gaq || [];
