--- a/merit/seniors/index.html
+++ b/merit/seniors/index.html
@@ -9,16 +9,17 @@
     <meta name="description" content="The UCLA Scholarship Resource Center provides scholarship information, resources, and support services to all UCLA students, regardless of financial aid eligibility."/>
     <meta name="author" content="Joon-Sub Chung">
 
+
       <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
 
       <!-- Le styles -->
-      <link href="../assets/css/bootstrap.css" rel="stylesheet">
-      <link href="../assets/css/bootmin.css" rel="stylesheet">
+      <link href="../../assets/css/bootstrap.css" rel="stylesheet">
+      <link href="../../assets/css/bootmin.css" rel="stylesheet">
       <style type="text/css">
 
 
         body {
-          background-image:url('../assets/img/sub-background.png');
+          background-image:url('../../assets/img/sub-background.png');
           background-repeat: repeat-x;
           background-color: #dfeef9;
           padding-top: 0px;
@@ -205,7 +206,7 @@
             margin-bottom: 10px;
           }
           footer{
-            background-image:url('../assets/img/bgfooter.jpg');
+            background-image:url('../../assets/img/bgfooter.jpg');
             background-repeat: repeat-x;
             background-color: #fff;
           }
@@ -224,21 +225,24 @@
           .pad-me {
             padding: 0 25px;
           }
+          .scholarship-box {
+            margin-bottom: 20px;
+          }
       </style>
       
       <!--<link href="assets/css/bootstrap.css" rel="stylesheet">-->
 
       <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
-        <script src="../assets/js/html5shiv.js"></script>
+        <script src="../../assets/js/html5shiv.js"></script>
       <![endif]-->
 
       <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                      <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                     <link rel="shortcut icon" href="../assets/ico/favicon.png">
+      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../assets/ico/apple-touch-icon-144-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../../assets/ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../assets/ico/apple-touch-icon-72-precomposed.png">
+                      <link rel="apple-touch-icon-precomposed" href="../../assets/ico/apple-touch-icon-57-precomposed.png">
+                                     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
     </head>
 
     <body id="top">
@@ -301,13 +305,14 @@
 
       <div class="container top-logo">
         <ul class="breadcrumb">
-          <li><a href="../home/index.html">Home</a> <span class="divider">/</span></li>
-          <li class="active">National and International Scholarships</li>
+          <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
+          <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
+          <li class="active">Seniors</li>
         </ul>
       </div>
       <!-- pic -->
       <div class="container">
-        <img src="../assets/img/pic4.png">
+        <img src="../../assets/img/pic4.png">
       </div>
       <!-- mid -->
       <div class="container main-feature-bg">
@@ -316,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>National and International Scholarships</h2>
+                <h2>Seniors</h2>
                 <hr/>
               </div>
             </div>
@@ -325,24 +330,96 @@
             <div class="span4">
               <h3>Scholarship Links</h3>
               <ul class="unstyled">
-                <li><a href="./sophomores/index.html">Sophomores</a></li>
-                <li><a href="./juniors/index.html">Juniors</a></li>
-                <li><a href="./seniors/index.html">Seniors</a></li>
-                <li><a href="./grads/index.html">Recent Graduates</a></li>
+                <li><a href="../sophomores/index.html">Sophomores</a></li>
+                <li><a href="../juniors/index.html">Juniors</a></li>
+                <li><a href="../seniors/index.html">Seniors</a></li>
+                <li><a href="../grads/index.html">Recent Graduates</a></li>
               </ul>
             </div>
             <div class="span8">
-              <h3>Awards</h3>
-              <p>
-                The National and International Merit Scholarships are prestigious awards with numerous benefits. In order to qualify for many of these scholarships, you must be nominated by a UCLA selection committee: therefore, please remember that
-              </p>
-              <p>
-                <blockquote>the UCLA campus deadline for nomination is approximately ONE MONTH PRIOR to the official scholarship deadline.</blockquote>
-              </p>
-              <p>
-                Some of these applications, particularly the International Merit Scholarships, have campus deadlines as early as late September, prior to the beginning of Fall Quarter, during the year in which you apply. 
-              </p>
-
+              <div class="row-fluid">
+                <div class="span12">
+                  <h3>Awards</h3>
+                </div>
+              </div>
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="boren.html">Boren Scholarship</a></div>
+                  <div class="span8">Boren Scholarships provide U.S. undergraduate students with the opportunity to study abroad in areas of the world that are critical to U.S. interests and underrepresented in study abroad, including Africa, Asia, Central &amp; Eastern Europe, Eurasia, Latin America, and the Middle East.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="churchill.html">Churchill Scholarship</a></div>
+                  <div class="span8">For seniors or recent graduates interested in graduate study in Engineering, Mathematics, or Science at Cambridge University</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="fashion.html">Fashion Scholarship Fund (FSF)</a></div>
+                  <div class="span8">The YMA Fashion Scholarship Fund (FSF) grants scholarships to talented students and facilitates internships, mentorships, and career programs. Open Students of any major with a demonstrated interest in fashion.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="gates.html">Gates Cambridge Scholarships</a></div>
+                  <div class="span8">Gates Cambridge Scholarships are prestigious, highly competitive full-cost scholarships. They are awarded to outstanding applicants from countries outside the UK to pursue a full-time postgraduate degree in any subject available at the University of Cambridge. </div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="david.html">Michel David-Weill Scholarship</a></div>
+                  <div class="span8">Outstanding UCLA Seniors are invited to apply for the Michel David-Weill Scholarship. The Scholarship supports an exceptional student to study for two years for a Master’s degree at Sciences-Po in Paris. </div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="jack.html">Jack Kent Cooke Scholarship</a></div>
+                  <div class="span8">Outstanding UCLA Seniors or recent graduates in all disciplines, who plan to pursue a graduate degree in the arts.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="james.html">James Madison Memorial Fellowship</a></div>
+                  <div class="span8">For Seniors or Recent Graduates who Plan Masters Degrees in American History, Political Science, Teaching or Education</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="javits.html">Javits Fellowship</a></div>
+                  <div class="span8">This program provides fellowships to students of superior academic ability—selected on the basis of demonstrated achievement, financial need, and exceptional promise—to undertake study at the doctoral and Master of Fine Arts level in selected fields of arts, humanities, and social sciences.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="marshall.html">Marshall Scholarship</a></div>
+                  <div class="span8">Outstanding UCLA seniors or recent graduates are invited to apply for a British Marshall Scholarship. Marshall Scholarships finance young Americans of exceptional ability to study for a graduate degree in any discipline at any British University in the United Kingdom.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="mitchell.html">Mitchell Scholarship</a></div>
+                  <div class="span8">For Seniors or Recent Graduates Interested in Graduate Study in Ireland</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="thomas.html">The Thomas R. Pickering Foreign Affairs Fellowship</a></div>
+                  <div class="span8">The Fellowship is designed to attract outstanding individuals from all ethnic, racial and social backgrounds who have an interest in pursuing a Foreign Service career with the U.S. Department of State.</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="rhodes.html">Rhodes Scholarship</a></div>
+                  <div class="span8">For Seniors or Recent Graduates Interested in Graduate Study at Oxford University</div>
+                </div> 
+              </div><!-- end -->
+              <div class="scholarship-box"><!-- start -->
+                <div class="row-fluid">
+                  <div class="span4"><a href="paul.html">Paul and Daisy Soros Fellowships for New Americans</a></div>
+                  <div class="span8">Paul and Daisy Soros Fellowships for New Americans honors and supports the graduate educations of 30 New Americans – permanent residents or naturalized citizens if born abroad; otherwise children of naturalized citizen parents -- each year.   Fellows can study in any degree-granting program in any field at any university in the United States.  Selection is based on creativity, originality, initiative and sustained accomplishment.</div>
+                </div> 
+              </div><!-- end -->
             </div>
          </div>
         </div>
@@ -395,8 +472,8 @@
       <!-- Placed at the end of the document so the pages load faster -->
       <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
       <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-      <script src="../assets/js/bootstrap.js"></script>
-      <script src="../assets/js/jquery.menu-aim.js"></script>
+      <script src="../../assets/js/bootstrap.js"></script>
+      <script src="../../assets/js/jquery.menu-aim.js"></script>
         <script type="text/javascript">
 
   var _gaq = _gaq || [];
