--- a/merit/seniors/james.html
+++ b/merit/seniors/james.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -12,13 +12,13 @@
       <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow:400,700' rel='stylesheet' type='text/css'>
 
       <!-- Le styles -->
-      <link href="../assets/css/bootstrap.css" rel="stylesheet">
-      <link href="../assets/css/bootmin.css" rel="stylesheet">
+      <link href="../../assets/css/bootstrap.css" rel="stylesheet">
+      <link href="../../assets/css/bootmin.css" rel="stylesheet">
       <style type="text/css">
 
 
         body {
-          background-image:url('../assets/img/sub-background.png');
+          background-image:url('../../assets/img/sub-background.png');
           background-repeat: repeat-x;
           background-color: #dfeef9;
           padding-top: 0px;
@@ -205,7 +205,7 @@
             margin-bottom: 10px;
           }
           footer{
-            background-image:url('../assets/img/bgfooter.jpg');
+            background-image:url('../../assets/img/bgfooter.jpg');
             background-repeat: repeat-x;
             background-color: #fff;
           }
@@ -224,21 +224,24 @@
           .pad-me {
             padding: 0 25px;
           }
+          .scholarship-box {
+            margin-bottom: 20px;
+          }
       </style>
       
       <!--<link href="assets/css/bootstrap.css" rel="stylesheet">-->
 
       <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
       <!--[if lt IE 9]>
-        <script src="../assets/js/html5shiv.js"></script>
+        <script src="../../assets/js/html5shiv.js"></script>
       <![endif]-->
 
       <!-- Fav and touch icons -->
-      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                      <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                     <link rel="shortcut icon" href="../assets/ico/favicon.png">
+      <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../assets/ico/apple-touch-icon-144-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../../assets/ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../assets/ico/apple-touch-icon-72-precomposed.png">
+                      <link rel="apple-touch-icon-precomposed" href="../../assets/ico/apple-touch-icon-57-precomposed.png">
+                                     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
     </head>
 
     <body id="top">
@@ -301,13 +304,15 @@
 
       <div class="container top-logo">
         <ul class="breadcrumb">
-          <li><a href="../home/index.html">Home</a> <span class="divider">/</span></li>
-          <li class="active">National and International Scholarships</li>
+          <li><a href="../../home/index.html">Home</a> <span class="divider">/</span></li>
+          <li><a href="../index.html">National and International Scholarships</a> <span class="divider">/</span></li>
+          <li><a href="./index.html">Seniors</a> <span class="divider">/</span></li>
+          <li class="active">James Madison Memorial Fellowship</li>
         </ul>
       </div>
       <!-- pic -->
       <div class="container">
-        <img src="../assets/img/pic4.png">
+        <img src="../../assets/img/pic4.png">
       </div>
       <!-- mid -->
       <div class="container main-feature-bg">
@@ -316,7 +321,7 @@
           <div class="pad-me">
             <div class="row-fluid">
               <div class="span12">
-                <h2>National and International Scholarships</h2>
+                <h2>James Madison Memorial Fellowship</h2>
                 <hr/>
               </div>
             </div>
@@ -325,24 +330,53 @@
             <div class="span4">
               <h3>Scholarship Links</h3>
               <ul class="unstyled">
-                <li><a href="./sophomores/index.html">Sophomores</a></li>
-                <li><a href="./juniors/index.html">Juniors</a></li>
-                <li><a href="./seniors/index.html">Seniors</a></li>
-                <li><a href="./grads/index.html">Recent Graduates</a></li>
+                <li><a href="../sophomores/index.html">Sophomores</a></li>
+                <li><a href="../juniors/index.html">Juniors</a></li>
+                <li><a href="../seniors/index.html">Seniors</a></li>
+                <li><a href="../grads/index.html">Recent Graduates</a></li>
               </ul>
             </div>
             <div class="span8">
-              <h3>Awards</h3>
-              <p>
-                The National and International Merit Scholarships are prestigious awards with numerous benefits. In order to qualify for many of these scholarships, you must be nominated by a UCLA selection committee: therefore, please remember that
-              </p>
-              <p>
-                <blockquote>the UCLA campus deadline for nomination is approximately ONE MONTH PRIOR to the official scholarship deadline.</blockquote>
-              </p>
-              <p>
-                Some of these applications, particularly the International Merit Scholarships, have campus deadlines as early as late September, prior to the beginning of Fall Quarter, during the year in which you apply. 
-              </p>
-
+              <div class="row-fluid">
+                <h3>Description</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                	<p>
+                    U.S. citizens who demonstrate a commitment to civic responsibilities and to professional and collegial activities and who qualify for admission with graduate standing at an accredited U.S. university that offers a qualifying master's degree program are eligible to apply. Applicants must be committed to teaching American history, American government, and/or social studies full time in grades 7–12.
+                  </p>
+                	<p>
+        						The James Madison Memorial Fellowship Foundation offers $24,000 James Madison Graduate Fellowships to individuals desiring to become outstanding teachers of the American Constitution at the secondary school level. Fellowship applicants compete only against other applicants from the states of their legal residence. Generally, one Fellowship per state is awarded each year.
+        					</p>
+                </div>
+              </div> 
+              <div class="row-fluid">
+                <h3>Award</h3>
+                <p>Award Amount: $24,000</p>
+              </div>
+              <div class="row-fluid">
+                <h3>Eligibility</h3>
+              </div>
+              <div class="row-fluid">
+                <div class="span12">
+                  <p>
+                    Applicants apply directly for this scholarship and do not have to be nominated by their school.
+                  </p>
+                  <p>
+                    The fellowships are intended exclusively for graduate study leading to a master’s degree. James Madison Fellows may attend any accredited institution of higher education in the United States. Each individual entering the James Madison Fellowship Program will be expected to pursue and complete a master’s degree in one of the following (listed in order of the Foundation’s preference):
+                  </p>
+                <ul>
+                  <li>Master of Arts (MA) in American history or in political science (also referred to as “government and politics” or as “government”)</li>
+                  <li>Master of Arts in Teaching (MAT) concentrating on either American Constitutional history (in a history department) or American government, political institutions, and political theory (in a political science department)</li>
+                  <li>Master of Education (MEd) or the Master of Arts or Master of Science in Education with a concentration in American history or American government, political institutions, and political theory</li>
+                </ul>
+                <p>
+                  UCLA students: contact the James Madison Memorial Fellowship Foundation at 2000 K Street, NW, Suite 303, Washington, DC 20006, (202) 653-8700, or call (800) 525-6928 for general information, or visit the James Madison Fellowship website.
+                </p>
+                For more information, go to <br />
+                <a href="http://www.jamesmadison.gov/">http://www.jamesmadison.gov/</a><br />
+                </div>
+              </div> 
             </div>
          </div>
         </div>
@@ -389,14 +423,13 @@
         </div>
 
       </div>
-
       <!-- Le javascript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+      <script type="text/script" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
       <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
-      <script src="../assets/js/bootstrap.js"></script>
-      <script src="../assets/js/jquery.menu-aim.js"></script>
+      <script type="text/script" src="../../assets/js/bootstrap.js"></script>
+      <script type="text/script" src="../../assets/js/jquery.menu-aim.js"></script>
         <script type="text/javascript">
 
   var _gaq = _gaq || [];
