--- a/merit/sophomores/index.html
+++ b/merit/sophomores/index.html
@@ -339,7 +339,7 @@
             <div class="span8">
               <div class="row-fluid">
                 <div class="span12">
-                  <h3>The Scholarship</h3>
+                  <h3>Awards</h3>
                 </div>
               </div>
               <div class="scholarship-box"><!-- start -->
